<resources>
    <string name="app_name">NYCSchool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="no_sat_related_data_found">No SAT related data found</string>
    <string name="nyc_high_schools">NYC High Schools</string>
    <string name="no_of_sat_taker">"No. of SAT Taker: "</string>
    <string name="sat_critical_reading_avg_score">Sat critical reading avg score:</string>
    <string name="sat_math_avg_score">SAT Math Avg Score:</string>
    <string name="sat_writing_avg_score">SAT Writing Avg Score:</string>
</resources>