<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.sat.SchoolSATResultFragment">

    <ImageView
        android:id="@+id/backPress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:padding="15dp"
        android:textAlignment="center"
        android:visibility="gone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backPress">

        <TextView
            android:id="@+id/schoolName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/noOfSatTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/no_of_sat_taker"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/schoolName" />

        <TextView
            android:id="@+id/noOfSatTakenNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/noOfSatTaken"
            app:layout_constraintStart_toEndOf="@id/noOfSatTaken"
            app:layout_constraintTop_toTopOf="@id/noOfSatTaken" />

        <TextView
            android:id="@+id/readingAvgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sat_critical_reading_avg_score"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noOfSatTaken" />

        <TextView
            android:id="@+id/readingAvgScoreNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/readingAvgScore"
            app:layout_constraintStart_toEndOf="@id/readingAvgScore"
            app:layout_constraintTop_toTopOf="@id/readingAvgScore" />

        <TextView
            android:id="@+id/satMathAvgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sat_math_avg_score"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/readingAvgScore" />

        <TextView
            android:id="@+id/satMathAvgScoreNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/satMathAvgScore"
            app:layout_constraintStart_toEndOf="@id/satMathAvgScore"
            app:layout_constraintTop_toTopOf="@id/satMathAvgScore" />

        <TextView
            android:id="@+id/satWritingAvgScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sat_writing_avg_score"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/satMathAvgScore" />

        <TextView
            android:id="@+id/satWritingAvgScoreNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@id/satWritingAvgScore"
            app:layout_constraintStart_toEndOf="@id/satWritingAvgScore"
            app:layout_constraintTop_toTopOf="@id/satWritingAvgScore" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backPress"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/student" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_15sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backPress"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/error" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backPress">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/noDataLottie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_rawRes="@raw/nodata" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/no_sat_related_data_found"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/noDataLottie"
            app:layout_constraintStart_toStartOf="@id/noDataLottie"
            app:layout_constraintTop_toBottomOf="@id/noDataLottie" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>